# drone_flowering

./: .gitignore  AGENTS.md  AGENTS.md.bak  DATA_SCHEMA.md  DESIGN.md  DEV_STATUS.md  EXPERIMENTS.md  PRD.md  PSDK_INTEGRATION_NOTES.md  README.md  RUNBOOK.md  TASKS.md  pyproject.toml
configs/: offline.json
src/drone_flowering/: __init__.py  __main__.py  app.py  config.py  frame_source.py  inference.py  overlay.py  schema.py  telemetry.py  writer.py
src/drone_plot_gap/: __init__.py  __main__.py  config.py  frame_source.py  inference.py  overlay.py  schema.py  telemetry.py
tests/: test_pipeline_smoke.py
