[project]
name = "drone-plot-gap"
version = "0.1.0"
description = "Offline prototype pipeline Computer Vision drone untuk deteksi plot bolong pada kebun nanas."
requires-python = ">=3.11"
dependencies = [
  "opencv-python-headless>=4.8",
  "numpy>=1.24",
]

[project.scripts]
drone-plot-gap = "drone_plot_gap.__main__:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
